<resources>
    <string name="app_name">ParityCubeApp</string>
    <string name="action_settings">Settings</string>
    <string name="demo1">Demo1</string>
    <string name="demo2">Demo2</string>
    <string name="demo3">Demo3</string>
    <string name="demo4">Demo4</string>
    <string name="demo5">Demo5</string>
    <string name="demo6">Demo6</string>
    <string name="demo7">Demo7</string>
    <string name="demo8">Demo8</string>
    <string name="demo9">Demo9</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="subgroup">subgroup</string>
    <string name="sub_demo1">sub_demo1</string>
    <string name="sub_demo2">sub_demo2</string>
</resources>
